updates from dingo-35

--- a/SmartEVSE-3/platformio.ini
+++ b/SmartEVSE-3/platformio.ini
@@ -30,7 +30,7 @@ lib_deps =
 ;if left out it leads to compiler error for newly started projects
 ;see https://github.com/me-no-dev/ESPAsyncWebServer/issues/1147
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	khoih-prog/ESPAsync_WiFiManager@1.14.1
+	khoih-prog/ESPAsync_WiFiManager
 	miq19/eModbus@1.7.0
 	bblanchon/ArduinoJson@^6.21.4
 	https://github.com/256dpi/arduino-mqtt#7afcfb1
